// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TourTip matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TourTip
    align="center"
    classes={
      Object {
        "down": "down",
        "left": "left",
        "right": "right",
        "tip": "tip",
        "up": "up",
      }
    }
    direction="down"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": undefined,
      "className": "tip down",
      "style": Object {},
    },
    "ref": [Function],
    "rendered": null,
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": undefined,
        "className": "tip down",
        "style": Object {},
      },
      "ref": [Function],
      "rendered": null,
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`TourTipJSS matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Jss(TourTip)
    align="center"
    direction="down"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "align": "center",
      "classes": Object {
        "down": "TourTip-down-0-1-4",
        "left": "TourTip-left-0-1-3",
        "right": "TourTip-right-0-1-2",
        "tip": "TourTip-tip-0-1-1",
        "up": "TourTip-up-0-1-5",
      },
      "direction": "down",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "align": "center",
        "classes": Object {
          "down": "TourTip-down-0-1-4",
          "left": "TourTip-left-0-1-3",
          "right": "TourTip-right-0-1-2",
          "tip": "TourTip-tip-0-1-1",
          "up": "TourTip-up-0-1-5",
        },
        "direction": "down",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
